# itemfinder

./: README.rst  app.py  pyproject.toml
notebook/: naver_datalab_api.ipynb  naver_search_ad_api.ipynb
tests/: test_itemfinder.py
ui/: main.ui
