[tool.poetry]
name = "itemfinder"
version = "0.1.0"
description = ""
authors = ["davetpj <dhkim92@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
PyQt5 = "5.15.4"
PyQt5Designer = "^5.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
